--- a/workspace/lab2/answers.yaml
+++ b/workspace/lab2/answers.yaml
@@ -125,3 +125,62 @@
     - false
     - false
     assumptions: []
+2.2.1:
+  Compared to the untiled matrix multiplication, which of 'compulsory', 'capacity', or 'conflict' misses does tiling reduce?:
+    answer: conflict
+    assumptions: []
+  ? Does the cache for tensor A have (1) compulsory, (2) capacity, and (3) conflict
+    misses? Please write your answer (True/False in Python) in order as a list (e.g.,
+    [True, False, True]).
+  : answer:
+    - true
+    - false
+    - false
+    assumptions: []
+  ? Does the cache for tensor B have (1) compulsory, (2) capacity, and (3) conflict
+    misses? Please write your answer (True/False in Python) in order as a list (e.g.,
+    [True, False, True]).
+  : answer:
+    - true
+    - true
+    - false
+    assumptions: []
+  ? Does the cache for tensor C have (1) compulsory, (2) capacity, and (3) conflict
+    misses? Please write your answer (True/False in Python) in order as a list (e.g.,
+    [True, False, True]).
+  : answer:
+    - true
+    - false
+    - false
+    assumptions: []
+2.2.2:
+  How many times is an element of tensor A accessed?:
+    answer: 64
+    assumptions: []
+  What is the maximum reuse distance of tensor B in the dataflow in QUESTION 1? Answer with an integer value.:
+    answer: 16
+    assumptions: []
+  What is the reuse distance of tensor A in the dataflow in QUESTION 1? Answer with an integer value.:
+    answer: 4
+    assumptions: []
+2.2.3:
+  ? What is the reuse distance of tensor A in the dataflow in QUESTION 2? Answer as
+    a list of [shorter reuse distance, longer reuse distance].
+  : answer:
+    - 1
+    - 7
+    assumptions: []
+  ? What is the reuse distance of tensor B in the dataflow in QUESTION 2? Answer as
+    a list of [shorter reuse distance, longer reuse distance].
+  : answer:
+    - 4
+    - 28
+    assumptions: []
+3.1.1:
+  '':
+    answer: true
+    assumptions: []
+3.1.2:
+  '':
+    answer: true
+    assumptions: []
